// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System|Table Financial Table 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-1o8230t-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-uzl8lq-TableCell"
        >
          topLeftText
        </td>
        <td
          className="css-52f7b8-TableCell"
          colSpan={3}
        >
          <div>
            <div>
              top right section
            </div>
          </div>
        </td>
      </tr>
    </thead>
  </table>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-dfepu1-Table"
      >
        <th
          className="css-1973saa-TableCell"
        />
        <th
          className="css-1qrssk1-TableCell"
        >
          Title
        </th>
        <th
          className="css-1qrssk1-TableCell"
        >
          Name
        </th>
        <th
          className="css-1qrssk1-TableCell"
        >
          Surname
        </th>
        <th
          className="css-kljbfu-TableCell"
        >
          Age
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
          colSpan={2}
        >
          <span
            data-column="Name"
          >
            Sum
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Design System|Table Fixed Header Table 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-1o8230t-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-uzl8lq-TableCell"
        >
          topLeftText
        </td>
        <td
          className="css-52f7b8-TableCell"
          colSpan={3}
        >
          <div>
            <div>
              top right section
            </div>
          </div>
        </td>
      </tr>
    </thead>
  </table>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-dfepu1-Table"
      >
        <th
          className="css-a3pxss-TableCell"
        />
        <th
          className="css-1r1qkc1-TableCell"
        >
          Title
        </th>
        <th
          className="css-1r1qkc1-TableCell"
        >
          Name
        </th>
        <th
          className="css-1r1qkc1-TableCell"
        >
          Surname
        </th>
        <th
          className="css-1w04xju-TableCell"
        >
          Age
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <th
          className="css-sycyqs-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-elmcam-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-1p3ik6x-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Design System|Table Regular Table with simple rows 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-1o8230t-TableRow"
      >
        <td
          className="css-uzl8lq-TableCell"
        >
          topLeftText
        </td>
        <td
          className="css-52f7b8-TableCell"
          colSpan={3}
        >
          <div>
            <div>
              top right section
            </div>
          </div>
        </td>
      </tr>
    </thead>
  </table>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-dfepu1-Table"
      >
        <th
          className="css-1qrssk1-TableCell"
        >
          Title
        </th>
        <th
          className="css-1qrssk1-TableCell"
        >
          Name
        </th>
        <th
          className="css-1qrssk1-TableCell"
        >
          Surname
        </th>
        <th
          className="css-kljbfu-TableCell"
        >
          Age
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
      <tr
        className="css-z4slop-TableRow"
      >
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Title"
          >
            title
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Name"
          >
            firstname
          </span>
        </td>
        <td
          className="css-hgmnoe-TableCell"
        >
          <span
            data-column="Surname"
          >
            lastname
          </span>
        </td>
        <td
          className="css-l5yfaw-TableCell"
        >
          <span
            data-column="Age"
          >
            4.221
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Design System|Table Table with expandable rows 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead>
      <tr
        className="css-1o8230t-TableRow"
      >
        <th
          className="css-1esmywb-TableCell"
        >
          <span
            className="css-u4dw6y-CheckBox"
          >
            <span
              className="css-124gikp-CheckBox"
            >
              <input
                checked={false}
                className="css-ik8tl5-CheckBox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                htmlFor="styled-checkbox-"
              />
            </span>
          </span>
        </th>
        <td
          className="css-uzl8lq-TableCell"
        >
          topLeftText
        </td>
        <td
          className="css-52f7b8-TableCell"
          colSpan={3}
        >
          <div>
            <div>
              top right section
            </div>
          </div>
        </td>
      </tr>
    </thead>
  </table>
  <table
    className="css-1n7pp7a-Table"
  >
    <thead />
    <tbody>
      <tr
        className="css-10e6370-TableRow"
      >
        <td
          className="css-111gbf7-TableCell"
          colSpan={5}
        >
          <div
            className="css-1jc5tjo-RenderRowOrNestedRow"
          >
            <table
              className="css-2ualxj-RenderRowOrNestedRow"
            >
              <tbody>
                <tr
                  className="css-1o8230t-TableRow"
                >
                  <th
                    className="css-1esmywb-TableCell"
                  >
                    <span
                      className="css-u4dw6y-CheckBox"
                    >
                      <span
                        className="css-124gikp-CheckBox"
                      >
                        <input
                          checked={false}
                          className="css-ik8tl5-CheckBox"
                          disabled={false}
                          id="styled-checkbox-"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <label
                          htmlFor="styled-checkbox-"
                        />
                      </span>
                    </span>
                  </th>
                  <td
                    className="css-18ou8n5-TableCell"
                  >
                    <div
                      className="css-wm32lt"
                    >
                      Title
                    </div>
                    <span
                      data-column="Title"
                    >
                      title
                    </span>
                  </td>
                  <td
                    className="css-hgmnoe-TableCell"
                  >
                    <div
                      className="css-wm32lt"
                    >
                      Name
                    </div>
                    <span
                      data-column="Name"
                    >
                      firstname
                    </span>
                  </td>
                  <td
                    className="css-hgmnoe-TableCell"
                  >
                    <div
                      className="css-wm32lt"
                    >
                      Surname
                    </div>
                    <span
                      data-column="Surname"
                    >
                      lastname
                    </span>
                  </td>
                  <td
                    className="css-l5yfaw-TableCell"
                  >
                    <div
                      className="css-wm32lt"
                    >
                      Age
                    </div>
                    <span
                      data-column="Age"
                    >
                      4.221
                    </span>
                  </td>
                  <td
                    className="css-1h9pqp-TableCell"
                  >
                    <div>
                      <div
                        className="css-1e7d3at"
                        onClick={[Function]}
                      >
                        <div
                          className="css-e3lbzj"
                        >
                          <span
                            className="css-1gnbc76-Icon"
                          >
                            <SvgrURL
                              className="css-1md9xlz-Icon"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </td>
      </tr>
      <tr
        className="css-10e6370-TableRow"
      >
        <td
          className="css-111gbf7-TableCell"
          colSpan={5}
        >
          <div
            className="css-1jc5tjo-RenderRowOrNestedRow"
          >
            <table
              className="css-2ualxj-RenderRowOrNestedRow"
            >
              <tbody>
                <tr
                  className="css-1o8230t-TableRow"
                >
                  <th
                    className="css-1esmywb-TableCell"
                  >
                    <span
                      className="css-u4dw6y-CheckBox"
                    >
                      <span
                        className="css-124gikp-CheckBox"
                      >
                        <input
                          checked={false}
                          className="css-ik8tl5-CheckBox"
                          disabled={false}
                          id="styled-checkbox-"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <label
                          htmlFor="styled-checkbox-"
                        />
                      </span>
                    </span>
                  </th>
                  <td
                    className="css-18ou8n5-TableCell"
                  >
                    <div
                      className="css-wm32lt"
                    >
                      Title
                    </div>
                    <span
                      data-column="Title"
                    >
                      title
                    </span>
                  </td>
                  <td
                    className="css-hgmnoe-TableCell"
                  >
                    <div
                      className="css-wm32lt"
                    >
                      Name
                    </div>
                    <span
                      data-column="Name"
                    >
                      firstname
                    </span>
                  </td>
                  <td
                    className="css-hgmnoe-TableCell"
                  >
                    <div
                      className="css-wm32lt"
                    >
                      Surname
                    </div>
                    <span
                      data-column="Surname"
                    >
                      lastname
                    </span>
                  </td>
                  <td
                    className="css-l5yfaw-TableCell"
                  >
                    <div
                      className="css-wm32lt"
                    >
                      Age
                    </div>
                    <span
                      data-column="Age"
                    >
                      4.221
                    </span>
                  </td>
                  <td
                    className="css-1h9pqp-TableCell"
                  >
                    <div>
                      <div
                        className="css-1e7d3at"
                        onClick={[Function]}
                      >
                        <div
                          className="css-e3lbzj"
                        >
                          <span
                            className="css-1gnbc76-Icon"
                          >
                            <SvgrURL
                              className="css-1md9xlz-Icon"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
